# monster-mash

./: CONTRIBUTING.md  Dockerfile  README.md  docker_download_imgs.py
src/: CMakeLists.txt  commonStructs.h  cpanim.cpp  cpanim.h  def3dsdl.cpp  def3dsdl.h  defengarapl.cpp  defengarapl.h  exportgltf.cpp  exportgltf.h  loadsave.cpp  loadsave.h  macros.h  main.cpp  mainwindow.cpp  mainwindow.h  mypainter.cpp  mypainter.h  mywindow.cpp  mywindow.h  reconstruction.cpp  reconstruction.h  shaderTextureVertexCoords.h
src/other/: depthInfAlgs.cpp  depthInfAlgs.h
src/ui/: main.css  main.js  myshell.html
